# opfonts

./: LICENSE  README.md  README_zh-TW.md  op_fonts.toml  pyproject.toml
op_fonts/: cli.py  download.py  extract.py  merge.py  naming.py  pipeline.py  subset.py
opfonts/: __init__.py  __main__.py  charsets.py  cli.py  config.py  download.py  pipeline.py
