[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opfonts"
version = "0.1.0"
description = "Minimal multi-language font builder with CJK subsetting"
requires-python = ">=3.11"
dependencies = [
    "cffsubr>=0.4.0",
    "fonttools>=4.47",
]

[tool.setuptools.packages.find]
include = ["opfonts*"]

[project.scripts]
opfonts = "opfonts.cli:main"
